--- a/css/top.css
+++ b/css/top.css
@@ -8,7 +8,7 @@
 .g-header .navbar-nav{float:right;}
 .g-logo{width:208px;height:82px;padding:0;}
 .g-logo img{display:block;width:208px;height:82px;}
-.g-fun{width:36px;height:32px;background: url("../img/fun.png") no-repeat;background-size:cover;margin-top:22px;}
+.g-fun{width:36px;height:32px;background: url("../img/fun.png") no-repeat;background-size:cover;margin-top:22px;padding:0;}
 .g-header .navbar-nav li,.g-header .navbar-nav li a{float:left;height:76px;}
 .g-header .navbar-nav li{border-right:1px solid #eaeaea;text-align:center;position:relative;}
 .g-header .navbar-nav li a{padding:0 30px;background: #f6f6f6;}
@@ -23,18 +23,18 @@
 .g-header .navbar-nav .g-nav-li.active span{color:#8ca3da;}
 .g-arrow{width:20px;height:10px;background: url("../img/arrow.png") no-repeat;position:absolute;top:74px;right:23px;display:none;}
 @media (min-width: 1068px) and (max-width: 1200px) {.g-header .navbar-nav li a{padding:0 20px;} }
-@media (min-width: 768px) and (max-width: 1068px) {.g-header .navbar-nav li a{padding:0 15px;} }
-@media (min-width: 768px) and (max-width: 992px) { .g-header,.g-header .navbar{height:158px;}}
+@media (min-width: 768px) and (max-width: 1068px) {.g-header .navbar-nav li a{padding:0 9px;} }
+@media (min-width: 1068px) and (max-width: 1168px) { .g-header .navbar-nav li a{padding:0 15px;}}
 @media (max-width: 768px){
     .g-header .navbar-collapse{overflow:hidden;border-top:none;width:100%;position:relative;}
     .g-header .navbar-toggle{border-color:transparent;}
     .g-header .navbar-toggle:focus, .g-header .navbar-toggle:hover{background-color: transparent;}
     .g-header .navbar-nav{margin-top:0;margin-bottom:0;float:none;}
     .g-header .navbar-nav li,.g-header .navbar-nav li a{width:100%;}
-    .g-header .navbar-nav li{border-right:none;text-align:left;height:63px;}
+    .g-header .navbar-nav li{border-right:none;text-align:left;height:62px;}
     .g-header .navbar-nav li.g-nav-li{border-bottom:1px solid #4772d4;}
     .g-header .navbar-nav li a{padding:0;background: #3b64c4;padding-left:30px;height:62px;}
-    .g-header .navbar-nav li em,.m-header .navbar-nav li span{display:inline-block;vertical-align: top;}
+    .g-header .navbar-nav li em,.g-header .navbar-nav li span{display:inline-block;vertical-align: top;}
     .g-header .navbar-nav li em{font-size:16px;color:#c1cff2;line-height:22px;padding-top:0;padding-top:20px;}
     .g-header .navbar-nav li span{font-size:10px;color:#6589dd;font-family:"\5FAE\8F6F\96C5\9ED1";line-height:22px;padding-left:10px;padding-top:22px;}
     .g-header .g-login em{padding-left:0;}
