--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 /*reset start*/
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,button{margin:0;padding:0}
-body{font:12px/1.5 \5B8B\4F53;}
+body{font:12px/1.5 \5FAE\8F6F\96C5\9ED1;}
 table{border-collapse:collapse;border-spacing:0}
 button,input,textarea,fieldset{padding:0;*overflow:visible}
 input,textarea{outline:0;resize:none}
@@ -45,7 +45,7 @@ a:hover{text-decoration: none;}
 
 
 *{box-sizing: content-box;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;}
-.container{padding-right: 0px;padding-left: 0px;overflow: hidden;}
+.container{padding-right: 0px;padding-left: 0px;/*overflow: hidden;*/}
 .first-box{padding-right: 0px;padding-left: 0px;}
 .second-box{padding-right: 0px;padding-left: 0px;}
 .three-box{padding-right: 0px;padding-left: 0px;}
@@ -249,7 +249,7 @@ a:hover{text-decoration: none;}
 .con-action-table .con-result-row a.con-result-all:hover{color:#3b64c4;text-decoration: underline;}
 .con-slide-m2{margin-top:30px;}
 
-.footer{height:80px;width:100%;background: #1c1c1c;width:100%;line-height:80px;}
+.footer{background: #1c1c1c;line-height:20px;padding:30px 20px;}
 .footer p{text-align:center;color:#999999;}
 .footer p span{padding:0 10px;}
 
@@ -289,7 +289,7 @@ a:hover{text-decoration: none;}
 	.con-result-list .paiming-table{margin-bottom: 10px;}
 	.con-action-dels{padding-left: 10px; padding-right: 10px;}
 	.first-box{margin-bottom: 40px;}
-	.first-box .video-box,.first-box .con-schedule{width: 76%;margin-left: auto;margin-right: auto;}
+	.first-box .video-box,.first-box .con-schedule{width: 85%;margin-left: auto;margin-right: auto;}
 	.first-box .con-schedule{ padding-top: 0px;}
 	.first-box .con-reg-title{ border-bottom: none; padding-top: 17px; padding-bottom: 17px;background: #3b64c4; position: relative;}
 	.first-box .con-reg-title:after{ content: ''; width: 29px; height: 17px;background: url("../img/arrow_down.png") no-repeat; position: absolute; right: 21px; top: 31px;    visibility: visible;}
@@ -323,6 +323,9 @@ a:hover{text-decoration: none;}
 	.second-box .con-reg-more{ width: 17px; height: 29px; margin: 7px 3px 0 0;background: url("../img/arrow3.png") no-repeat;font-size: 0px;background-size: 100% 100%; overflow: hidden;}
 }
 
-@media(max-width:582px) {
+/*@media(max-width:582px) {
 	.con-reg-title{ margin-bottom: 20px;}
-}
+}*/
+#con-right1,#con-right2{transition:ease 0.2s;-webkit-transition:ease 0.2s;-moz-transition:ease 0.2s;-ms-transition:ease 0.2s;}
+.con-reg-title:after{transition:transform ease 0.3s;-webkit-transition:-webkit-transform ease 0.3s;-moz-transition:-webkit-transform ease 0.3s;-ms-transition:-webkit-transform ease 0.3s;}
+.con-reg-title.collapsed:after {transform: rotate(-180deg);-moz-transform: rotate(-180deg);-ms-transform: rotate(-180deg);-webkit-transform: rotate(-180deg);}
