--- a/css/top.css
+++ b/css/top.css
@@ -1,4 +1,31 @@
 
+
+/*reset start*/
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,button{margin:0;padding:0}
+body{font:12px/1.5 \5B8B\4F53;}
+table{border-collapse:collapse;border-spacing:0}
+button,input,textarea,fieldset{padding:0;*overflow:visible}
+input,textarea{outline:0;resize:none}
+fieldset,img{border:0}
+address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}
+ol,ul,li{list-style:none}
+caption,th{text-align:left}
+h1,h2,h3,h4,h5,h6{font-size:100%}
+q:beforce,q:after{content:''}
+abbr,acronym{border:0}
+label{cursor:pointer}
+legend{margin-left:0}
+.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0}
+.clearfix{*zoom:1}
+.fl{float:left;display:inline}
+.fr{float:right;display:inline}
+.none{display:none}
+.pr{position:relative}
+.pa{position:absolute}
+i{font-style:normal;}
+a:hover{text-decoration: none;}
+
+
 /*header start*/
 .g-header,.g-header .navbar-header{height:76px;}
 .g-header{background: #f6f6f6;width:100%;z-index:10;}
@@ -59,3 +86,11 @@
 .g-ban-arrow.left{left:20px;background: url("../img/arrow-left.png") no-repeat;}
 .g-ban-arrow.right{right:20px;background: url("../img/arrow-right.png") no-repeat;}
 /*banner slide end*/
+
+
+/*尾部*/
+.footer{height:80px;width:100%;background: #1c1c1c;width:100%;line-height:80px;}
+.footer p{text-align:center;color:#999999;}
+.footer p span{padding:0 10px;}
+
+
