--- a/css/saishi.css
+++ b/css/saishi.css
@@ -2,7 +2,10 @@
 *{box-sizing: content-box;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;-ms-box-sizing: content-box;}
 .container{padding: 0px;}
 .row{ margin: 0px;}
-.col-sm-12{padding: 0px;}
+.col-xs-12,
+.col-sm-12,.col-sm-6,.col-sm-1,
+.col-md-6{padding: 0px;}
+
 
 @media (min-width: 1230px){
     .container{ width: 1200px;}
@@ -64,6 +67,10 @@
 .mingci{ width: 22px; height: 22px;text-align: center; line-height: 22px; color: #41485b;font-size: 16px;border-radius: 50%;background: #c2c9dc;margin: 0 auto;font-family: 'Arial';}
 .mingci.good{background-color: #41485b;color: #fff;}
 
+.load-more{font-size: 14px; color: #999999;line-height: 18px; cursor: pointer;}
+.load-more .rotate{display: inline-block; width: 22px; height: 18px; background: url("../img/rotate.png") no-repeat;vertical-align: middle;margin-right: 4px;}
+.table > tbody > .load-more > td{color: #999999;}
+
 /*分页*/
 .fenye-box{text-align: center;}
 .fenye-box .pagination{ vertical-align: top;}
@@ -75,3 +82,111 @@
 .person-detail b{font-weight: normal;color: #41485b;}
 .person-detail span{color: #cdcdcd;padding:0 20px;}
 
+/*运动员查询*/
+.yundong-wrap{border-top:1px solid rgba(104,132,232,0.1);border-bottom:1px solid rgba(104,132,232,0.1);padding: 12px 20px 11px 20px;}
+.yundong-logo{padding: 2px 0;}
+.yundong-logo .logo{float: left; width: 32px; height: 32px; background: url("../img/yundong.png") no-repeat;margin-right: 11px;}
+.yundong-logo h3{float: left; color: #666666;font-size: 20px; line-height: 32px;}
+
+.yd-search-wrap{width:100%;display: box; display: -webkit-box;display: -moz-box;padding: 2px 0;}
+.yd-search-box{box-flex: 3;-webkit-box-flex: 3;-moz-box-flex: 3;padding-left: 130px;}
+
+.yd-search{width:100%;display: box; display: -webkit-box;display: -moz-box;}
+
+.search-text{/*float: left; */height: 30px; padding: 0 10px;border: 1px solid #adc2f4;box-flex: 3;-webkit-box-flex: 3;-moz-box-flex: 3;color: #bbbbbb;}
+.search-btn{ /* float: left;width: 80px; */display:block; min-width: 38px;height: 32px;line-height: 32px;background: #3b64c4;font-size: 14px; color: #cedbf9;text-align: center;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+
+.help-item{ float: left;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+.help-item i{ float: left; width: 17px; height: 16px;background: url("../img/help.png") no-repeat;margin: 8px 4px 0 24px;}
+.help-item p{ float: left; font-size: 14px; color: #41485b; line-height: 32px;}
+
+
+@media (max-width: 992px) {
+    .yd-search-box{ padding-left: 0px;}
+}
+@media (min-width: 992px) and (min-width: 1170px) {
+    .yd-search-box{ padding-left: 60px;}
+}
+
+
+/*赛事列表*/
+.saishi-list-wrap{padding: 0px 20px;}
+.saishi-list{padding-top: 8px;}
+.saishi-list li{padding: 10px 0px;}
+.saishi-list li:last-child{padding-bottom: 0px;}
+
+.siashi-list-item{background-color: #f6f6f6; border-left: 4px solid #fff045;padding: 10px;}
+.saishi-list li:hover .siashi-list-item{background: #eceef1;}
+
+.thumbnail-box{}
+.thumbnail-box .thumbnail{padding: 0px;margin-bottom:0px;border: none;border-radius: 0px;background-color:transparent;margin: 16px 13px 10px 13px; text-align: center;}
+.thumbnail-box .thumbnail-item{position: relative; height: 100%;display: inline-block;}
+.thumbnail-box .black-bg{width: 96px; height: 96px;background: #000000; position: absolute; left: -7px; top: -6px; z-index: 1;}
+.thumbnail-box .thumbnail-img{ position: relative;z-index: 4;}
+.thumbnail-box .bobao-ing{width: 32px; height: 100%;background: rgba(0,0,0,0.6); position: absolute; left: 0px; top: 0px; z-index: 5;}
+.thumbnail-box .bobao-ing span{ display: block; width: 16px; height: 16px;background: url("../img/status.png") no-repeat;margin: 17px auto 6px auto;}
+.thumbnail-box .bobao-ing p{ color: #fff;width: 16px;text-align: center;margin: 0 auto; line-height: 14px;}
+
+@media (min-width: 768px) {
+    .saishi-list-wrap .thumbnail-box{ width: 130px; height: 130px; min-width: 100px; height: 100px;}
+    .saishi-list-wrap .col-sm-9{width: 64%;}
+}
+
+
+.list-detail-box{min-height: 130px;padding-left: 17px;display: box; display: -webkit-box;display: -moz-box;-moz-box-align:center;
+    -webkit-box-align:center;
+    -o-box-align:center;
+    box-align:center;}
+.list-detail{-moz-box-flex:1;  -webkit-box-flex:1; box-flex:1;}
+.list-detail .title{font-size: 16px; color: #000000; line-height: 20px;}
+.list-detail .translate{font-size: 12px; color: #666666; line-height: 16px;padding: 10px 0 15px 0;}
+.list-detail .time{font-size: 14px; color: #666666; line-height: 18px;}
+
+.list-zc{padding-top: 7px;}
+.list-zc-item{ float: left;margin-right: 18px;}
+.list-zc-item i{ float: left; width: 30px; height: 30px;background-repeat: no-repeat;margin-right: 5px;}
+.list-zc-item i:nth-child(1){background-image: url("../img/icon1.png");}
+.list-zc-item i:nth-child(2){background-image: url("../img/icon2.png");}
+.list-zc-item span{ color: #6a6a6a; line-height: 30px;}
+
+.list-btn{display: block; width: 86px; height: 26px; line-height: 26px; border: 1px solid #83a1e9;border-radius: 18px; margin: 0 auto;color: #2b55bb;text-align: center;position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);}
+.list-btn.active,.list-btn:hover{background: #3b64c4; color: #fff;}
+.list-btn-box{
+    display:-moz-box;
+    display:-webkit-box;
+    display:box;
+    -moz-box-orient:vertical;
+    -webkit-box-orient:vertical;
+    box-orient:vertical;
+    width: 100%;
+    min-height: 130px;
+    vertical-align: top;
+}
+.list-btn-item{
+    -moz-box-flex:1;
+    -webkit-box-flex:1;
+    box-flex:1;
+    position: relative;
+}
+
+
+
+/*赛事成绩*/
+.chengji-head-wrap{padding: 10px 20px;background: #41485b;}
+.chengji-title{font-size: 14px; color: #fff; line-height: 28px;}
+.chengji-btn{float: right;}
+.chengji-btn a{ float: left; width: 86px; height: 26px; line-height: 26px;background-color: #414e72; border: 1px solid #3b64c4;border-radius: 18px; color: #fff;text-align: center;margin-left: 10px;}
+
+
+@media (max-width: 768px) {
+    .list-btn-box{
+        -moz-box-orient:horizontal;
+        -webkit-box-orient:horizontal;
+        box-orient:horizontal;
+        min-height: 28px;
+        margin: 10px 0;
+    }
+
+    .chengji-btn{ float: left;}
+    .chengji-btn a{margin: 2px 10px 2px 0px;}
+}
